--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
             <li class="address-list-item">
               <a href="tel:+380961111111" class="connect-header link"
                 ><svg class="icon-address-list" width="10" height="16">
-                  <use href="../svg/sprite.svg#icon-smartphone"></use>
-                </svg>+38 096 111 11 11</a
-              >
+                  <use href="../svg/sprite.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a>
             </li>
           </ul>
         </address>
@@ -112,6 +110,11 @@
                 width="370"
                 height="294"
               />
+              <div class="link-block">
+                <a href="" class="doing-link link">
+                  <p class="doing-text-link">Десктопные приложения</p>
+                </a>
+              </div>
             </li>
             <li class="doing-list-item">
               <img
@@ -120,6 +123,11 @@
                 width="370"
                 height="294"
               />
+              <div class="link-block">
+                <a href="" class="doing-link link">
+                  <p class="doing-text-link">Мобильные приложения</p>
+                </a>
+              </div>
             </li>
             <li class="doing-list-item">
               <img
@@ -128,6 +136,11 @@
                 width="370"
                 height="294"
               />
+              <div class="link-block">
+                <a href="" class="doing-link link">
+                  <p class="doing-text-link">Дизайнерские решения</p>
+                </a>
+              </div>
             </li>
           </ul>
         </div>
@@ -147,18 +160,26 @@
               <h3 class="name-title">Игорь Демьяненко</h3>
               <p class="profession">Product Designer</p>
               <ul class="social-list list">
-                <li class="social-list-item"><a href="" class="social-list-link"><svg class="icon-social" width="20" height="20">
-              <use href="../svg/sprite.svg#icon-instagram"></use>
-            </svg></a></li>
-                <li class="social-list-item"><a href="" class="social-list-link"><svg class="icon-social" width="20" height="20">
-              <use href="../svg/sprite.svg#icon-twitter"></use>
-            </svg></a></li>
-                <li class="social-list-item"><a href="" class="social-list-link"><svg class="icon-social" width="20" height="20">
-              <use href="../svg/sprite.svg#icon-facebook"></use>
-            </svg></a></li>
-                <li class="social-list-item"><a href="" class="social-list-link" ><svg class="icon-social" width="20" height="20">
-              <use href="../svg/sprite.svg#icon-linkedin"></use>
-            </svg></a></li>
+                <li class="social-list-item">
+                  <a href="" class="social-list-link"
+                    ><svg class="icon-social" width="20" height="20">
+                      <use href="../svg/sprite.svg#icon-instagram"></use></svg></a>
+                </li>
+                <li class="social-list-item">
+                  <a href="" class="social-list-link"
+                    ><svg class="icon-social" width="20" height="20">
+                      <use href="../svg/sprite.svg#icon-twitter"></use></svg></a>
+                </li>
+                <li class="social-list-item">
+                  <a href="" class="social-list-link"
+                    ><svg class="icon-social" width="20" height="20">
+                      <use href="../svg/sprite.svg#icon-facebook"></use></svg></a>
+                </li>
+                <li class="social-list-item">
+                  <a href="" class="social-list-link"
+                    ><svg class="icon-social" width="20" height="20">
+                      <use href="../svg/sprite.svg#icon-linkedin"></use></svg></a>
+                </li>
               </ul>
             </li>
             <li class="comand-list-item">
@@ -171,18 +192,26 @@
               <h3 class="name-title">Ольга Репина</h3>
               <p class="profession">Frontend Developer</p>
               <ul class="social-list list">
-                <li class="social-list-item"><a href="" class="social-list-link"><svg class="icon-social" width="20" height="20">
-                      <use href="../svg/sprite.svg#icon-instagram"></use>
-                    </svg></a></li>
-                <li class="social-list-item"><a href="" class="social-list-link"><svg class="icon-social" width="20" height="20">
-                      <use href="../svg/sprite.svg#icon-twitter"></use>
-                    </svg></a></li>
-                <li class="social-list-item"><a href="" class="social-list-link"><svg class="icon-social" width="20" height="20">
-                      <use href="../svg/sprite.svg#icon-facebook"></use>
-                    </svg></a></li>
-                <li class="social-list-item"><a href="" class="social-list-link"><svg class="icon-social" width="20" height="20">
-                      <use href="../svg/sprite.svg#icon-linkedin"></use>
-                    </svg></a></li>
+                <li class="social-list-item">
+                  <a href="" class="social-list-link"
+                    ><svg class="icon-social" width="20" height="20">
+                      <use href="../svg/sprite.svg#icon-instagram"></use></svg></a>
+                </li>
+                <li class="social-list-item">
+                  <a href="" class="social-list-link"
+                    ><svg class="icon-social" width="20" height="20">
+                      <use href="../svg/sprite.svg#icon-twitter"></use></svg></a>
+                </li>
+                <li class="social-list-item">
+                  <a href="" class="social-list-link"
+                    ><svg class="icon-social" width="20" height="20">
+                      <use href="../svg/sprite.svg#icon-facebook"></use></svg></a>
+                </li>
+                <li class="social-list-item">
+                  <a href="" class="social-list-link"
+                    ><svg class="icon-social" width="20" height="20">
+                      <use href="../svg/sprite.svg#icon-linkedin"></use></svg></a>
+                </li>
               </ul>
             </li>
             <li class="comand-list-item">
@@ -195,18 +224,26 @@
               <h3 class="name-title">Николай Тарасов</h3>
               <p class="profession">Marketing</p>
               <ul class="social-list list">
-                <li class="social-list-item"><a href="" class="social-list-link"><svg class="icon-social" width="20" height="20">
-                      <use href="../svg/sprite.svg#icon-instagram"></use>
-                    </svg></a></li>
-                <li class="social-list-item"><a href="" class="social-list-link"><svg class="icon-social" width="20" height="20">
-                      <use href="../svg/sprite.svg#icon-twitter"></use>
-                    </svg></a></li>
-                <li class="social-list-item"><a href="" class="social-list-link"><svg class="icon-social" width="20" height="20">
-                      <use href="../svg/sprite.svg#icon-facebook"></use>
-                    </svg></a></li>
-                <li class="social-list-item"><a href="" class="social-list-link"><svg class="icon-social" width="20" height="20">
-                      <use href="../svg/sprite.svg#icon-linkedin"></use>
-                    </svg></a></li>
+                <li class="social-list-item">
+                  <a href="" class="social-list-link"
+                    ><svg class="icon-social" width="20" height="20">
+                      <use href="../svg/sprite.svg#icon-instagram"></use></svg></a>
+                </li>
+                <li class="social-list-item">
+                  <a href="" class="social-list-link"
+                    ><svg class="icon-social" width="20" height="20">
+                      <use href="../svg/sprite.svg#icon-twitter"></use></svg></a>
+                </li>
+                <li class="social-list-item">
+                  <a href="" class="social-list-link"
+                    ><svg class="icon-social" width="20" height="20">
+                      <use href="../svg/sprite.svg#icon-facebook"></use></svg></a>
+                </li>
+                <li class="social-list-item">
+                  <a href="" class="social-list-link"
+                    ><svg class="icon-social" width="20" height="20">
+                      <use href="../svg/sprite.svg#icon-linkedin"></use></svg></a>
+                </li>
               </ul>
             </li>
             <li class="comand-list-item">
@@ -219,93 +256,120 @@
               <h3 class="name-title">Михаил Ермаков</h3>
               <p class="profession">UI Designer</p>
               <ul class="social-list list">
-                <li class="social-list-item"><a href="" class="social-list-link"><svg class="icon-social" width="20" height="20">
-                      <use href="../svg/sprite.svg#icon-instagram"></use>
-                    </svg></a></li>
-                <li class="social-list-item"><a href="" class="social-list-link"><svg class="icon-social" width="20" height="20">
-                      <use href="../svg/sprite.svg#icon-twitter"></use>
-                    </svg></a></li>
-                <li class="social-list-item"><a href="" class="social-list-link"><svg class="icon-social" width="20" height="20">
-                      <use href="../svg/sprite.svg#icon-facebook"></use>
-                    </svg></a></li>
-                <li class="social-list-item"><a href="" class="social-list-link"><svg class="icon-social" width="20" height="20">
-                      <use href="../svg/sprite.svg#icon-linkedin"></use>
-                    </svg></a></li>
+                <li class="social-list-item">
+                  <a href="" class="social-list-link"
+                    ><svg class="icon-social" width="20" height="20">
+                      <use href="../svg/sprite.svg#icon-instagram"></use></svg></a>
+                </li>
+                <li class="social-list-item">
+                  <a href="" class="social-list-link"
+                    ><svg class="icon-social" width="20" height="20">
+                      <use href="../svg/sprite.svg#icon-twitter"></use></svg></a>
+                </li>
+                <li class="social-list-item">
+                  <a href="" class="social-list-link"
+                    ><svg class="icon-social" width="20" height="20">
+                      <use href="../svg/sprite.svg#icon-facebook"></use></svg></a>
+                </li>
+                <li class="social-list-item">
+                  <a href="" class="social-list-link"
+                    ><svg class="icon-social" width="20" height="20">
+                      <use href="../svg/sprite.svg#icon-linkedin"></use></svg></a>
+                </li>
               </ul>
             </li>
           </ul>
         </div>
       </section>
-    <!--Regular clients-->
-    <section class="clients-sektion">
-      <div class="conteiner">
-        <h2 class="section-title">Постоянные клиенты</h2>
-        <ul class="clients-list list">
-          <li class="clients-list-item"><a href="" class="clients-list-link">
-            <svg class="icon-clients" width="45" height="50">
-              <use href="../svg/sprite.svg#icon-logo-1"></use>
-            </svg>
-          </a></li>
-          <li class="clients-list-item"><a href="" class="clients-list-link"><svg class="icon-clients" width="40" height="52">
-              <use href="../svg/sprite.svg#icon-logo-2"></use>
-            </svg></a></li>
-          <li class="clients-list-item"><a href="" class="clients-list-link"><svg class="icon-clients" width="41" height="43">
-              <use href="../svg/sprite.svg#icon-logo-3"></use>
-            </svg></a></li>
-          <li class="clients-list-item"><a href="" class="clients-list-link"><svg class="icon-clients" width="80" height="42">
-              <use href="../svg/sprite.svg#icon-logo-4"></use>
-            </svg></a></li>
-          <li class="clients-list-item"><a href="" class="clients-list-link"><svg class="icon-clients"  width="59" height="47">
-              <use href="../svg/sprite.svg#icon-logo-5"></use>
-            </svg></a></li>
-          <li class="clients-list-item"><a href="" class="clients-list-link"><svg class="icon-clients" width="88" height="45">
-              <use href="../svg/sprite.svg#icon-logo-6"></use>
-            </svg></a></li>
-        </ul>
-      </div>
-    </section>
+      <!--Regular clients-->
+      <section class="clients-sektion">
+        <div class="conteiner">
+          <h2 class="section-title">Постоянные клиенты</h2>
+          <ul class="clients-list list">
+            <li class="clients-list-item">
+              <a href="" class="clients-list-link">
+                <svg class="icon-clients" width="45" height="50">
+                  <use href="../svg/sprite.svg#icon-logo-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-list-item">
+              <a href="" class="clients-list-link"
+                ><svg class="icon-clients" width="40" height="52">
+                  <use href="../svg/sprite.svg#icon-logo-2"></use></svg></a>
+            </li>
+            <li class="clients-list-item">
+              <a href="" class="clients-list-link"
+                ><svg class="icon-clients" width="41" height="43">
+                  <use href="../svg/sprite.svg#icon-logo-3"></use></svg></a>
+            </li>
+            <li class="clients-list-item">
+              <a href="" class="clients-list-link"
+                ><svg class="icon-clients" width="80" height="42">
+                  <use href="../svg/sprite.svg#icon-logo-4"></use></svg></a>
+            </li>
+            <li class="clients-list-item">
+              <a href="" class="clients-list-link"
+                ><svg class="icon-clients" width="59" height="47">
+                  <use href="../svg/sprite.svg#icon-logo-5"></use></svg></a>
+            </li>
+            <li class="clients-list-item">
+              <a href="" class="clients-list-link"
+                ><svg class="icon-clients" width="88" height="45">
+                  <use href="../svg/sprite.svg#icon-logo-6"></use></svg></a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <!--Footer-->
     <footer class="footer">
       <div class="footer-block conteiner">
-        <div class="address-footer"> 
-        <a href="./index.html" class="link-logotipe-footer link"
-          ><span class="part-logotipe">Web</span
-          ><span class="footer-logo">Studio</span></a
-        >
-        <ul class="footer-list list">
-          <li class="footer-list-item adress">
-            г. Киев, пр-т Леси Украинки, 26
-          </li>
-          <li class="footer-list-item">
-            <a href="mailto:info@devstudio.com" class="connect-footer link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="footer-list-item">
-            <a href="tel:+380961111111" class="connect-footer link"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
+        <div class="address-footer">
+          <a href="./index.html" class="link-logotipe-footer link"
+            ><span class="part-logotipe">Web</span
+            ><span class="footer-logo">Studio</span></a
+          >
+          <ul class="footer-list list">
+            <li class="footer-list-item adress">
+              г. Киев, пр-т Леси Украинки, 26
+            </li>
+            <li class="footer-list-item">
+              <a href="mailto:info@devstudio.com" class="connect-footer link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="footer-list-item">
+              <a href="tel:+380961111111" class="connect-footer link"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
         </div>
-       <div class="join">
+        <div class="join">
           <h2 class="footer-list-title">присоединяйтесь</h2>
           <ul class="footer-social-list list">
-            <li class="footer-social-list-item"><a href="" class="footer-social-list-link"><svg class="icon-footer-social" width="20" height="20">
-                  <use href="../svg/sprite.svg#icon-instagram"></use>
-                </svg></a></li>
-            <li class="footer-social-list-item"><a href="" class="footer-social-list-link"><svg class="icon-footer-social" width="20" height="20">
-                  <use href="../svg/sprite.svg#icon-twitter"></use>
-                </svg></a></li>
-            <li class="footer-social-list-item"><a href="" class="footer-social-list-link"><svg class="icon-footer-social" width="20" height="20">
-                  <use href="../svg/sprite.svg#icon-facebook"></use>
-                </svg></a></li>
-            <li class="footer-social-list-item"><a href="" class="footer-social-list-link"><svg class="icon-footer-social" width="20" height="20">
-                  <use href="../svg/sprite.svg#icon-linkedin"></use>
-                </svg></a></li>
+            <li class="footer-social-list-item">
+              <a href="" class="footer-social-list-link"
+                ><svg class="icon-footer-social" width="20" height="20">
+                  <use href="../svg/sprite.svg#icon-instagram"></use></svg></a>
+            </li>
+            <li class="footer-social-list-item">
+              <a href="" class="footer-social-list-link"
+                ><svg class="icon-footer-social" width="20" height="20">
+                  <use href="../svg/sprite.svg#icon-twitter"></use></svg></a>
+            </li>
+            <li class="footer-social-list-item">
+              <a href="" class="footer-social-list-link"
+                ><svg class="icon-footer-social" width="20" height="20">
+                  <use href="../svg/sprite.svg#icon-facebook"></use></svg></a>
+            </li>
+            <li class="footer-social-list-item">
+              <a href="" class="footer-social-list-link"><svg class="icon-footer-social" width="20" height="20">
+                  <use href="../svg/sprite.svg#icon-linkedin"></use></svg></a>
+            </li>
           </ul>
-       </div>
+        </div>
       </div>
     </footer>
   </body>
