--- a/portfolio.html
+++ b/portfolio.html
@@ -71,12 +71,12 @@
       <ul class="potfolio-list list">
         <li class="portfolio-list-item">
           <a href="" class="link"
-            ><img
-              src="./image/portfolio/img.jpg"
-              alt="Technokyak"
-              width="370"
-              height="294"
-            />
+            >
+            <div class="cards-block">
+              <img src="./image/portfolio/img.jpg" alt="Technokyak" width="370" height="294" />
+              <div class="overlay"><p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+              шпионажа и атак на защищённые сервера конкурентов.</p></div>
+            </div>
             <div class="portfolio-border"><h2 class="portfolio-title">Технокряк</h2>
             <p class="portfolio-deskription">Веб-сайт</p></div>
             </a
@@ -84,12 +84,15 @@
         </li>
         <li class="portfolio-list-item">
           <a href="" class="link"
-            ><img
-              src="./image/portfolio/img-1.jpg"
-              alt="Poster New Orlean vs Golden Star"
-              width="370"
-              height="294"
-            />
+            >
+            <div class="cards-block">
+              <img src="./image/portfolio/img-1.jpg" alt="Poster New Orlean vs Golden Star" width="370" height="294" />
+              <div class="overlay">
+                <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                  платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
+            </div>
             <div class="portfolio-border"><h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
             <p class="portfolio-deskription">Дизайн</p></div>
             </a
@@ -97,12 +100,15 @@
         </li>
         <li class="portfolio-list-item">
           <a href="" class="link"
-            ><img
-              src="./image/portfolio/img-2.jpg"
-              alt="Restorant Seafood"
-              width="370"
-              height="294"
-            />
+            >
+            <div class="cards-block">
+              <img src="./image/portfolio/img-2.jpg" alt="Restorant Seafood" width="370" height="294" />
+              <div class="overlay">
+                <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                  платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
+            </div>
             <div class="portfolio-border"><h2 class="portfolio-title">Ресторан Seafood</h2>
             <p class="portfolio-deskription">Приложение</p></div>
             </a
@@ -110,12 +116,15 @@
         </li>
         <li class="portfolio-list-item">
           <a href="" class="link"
-            ><img
-              src="./image/portfolio/img-3.jpg"
-              alt="project Prime"
-              width="370"
-              height="294"
-            />
+            >
+            <div class="cards-block">
+              <img src="./image/portfolio/img-3.jpg" alt="project Prime" width="370" height="294"/>
+              <div class="overlay">
+                <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                  платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
+            </div>
             <div class="portfolio-border"><h2 class="portfolio-title">Проект Prime</h2>
             <p class="portfolio-deskription">Маркетинг</p></div>
             </a
@@ -123,12 +132,15 @@
         </li>
         <li class="portfolio-list-item">
           <a href="" class="link"
-            ><img
-              src="./image/portfolio/img-4.jpg"
-              alt="project Boxes"
-              width="370"
-              height="294"
-            />
+            >
+            <div class="cards-block">
+              <img src="./image/portfolio/img-4.jpg" alt="project Boxes" width="370" height="294"/>
+              <div class="overlay">
+                <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                  платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
+            </div>
             <div class="portfolio-border"><h2 class="portfolio-title">Проект Boxes</h2>
             <p class="portfolio-deskription">Приложение</p></div>
             </a
@@ -136,12 +148,15 @@
         </li>
         <li class="portfolio-list-item">
           <a href="" class="link"
-            ><img
-              src="./image/portfolio/img-5.jpg"
-              alt="Inspiration has no Borders"
-              width="370"
-              height="294"
-            />
+            >
+            <div class="cards-block">
+              <img src="./image/portfolio/img-5.jpg" alt="Inspiration has no Borders" width="370" height="294" />
+              <div class="overlay">
+                <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                  платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
+            </div>
             <div class="portfolio-border"><h2 class="portfolio-title">Inspiration has no Borders</h2>
             <p class="portfolio-deskription">Дизайн</p></div>
             </a
@@ -149,12 +164,15 @@
         </li>
         <li class="portfolio-list-item">
           <a href="" class="link"
-            ><img
-              src="./image/portfolio/img-6.jpg"
-              alt="Limited Edition"
-              width="370"
-              height="294"
-            />
+            >
+            <div class="cards-block">
+              <img src="./image/portfolio/img-6.jpg" alt="Limited Edition" width="370" height="294" />
+              <div class="overlay">
+                <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                  платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
+            </div>
             <div class="portfolio-border"><h2 class="portfolio-title">Издание Limited Edition</h2>
             <p class="portfolio-deskription">Веб-сайт</p></div>
             </a
@@ -162,12 +180,15 @@
         </li>
         <li class="portfolio-list-item">
           <a href="" class="link"
-            ><img
-              src="./image/portfolio/img-7.jpg"
-              alt="project LAB"
-              width="370"
-              height="294"
-            />
+            >
+            <div class="cards-block">
+              <img src="./image/portfolio/img-7.jpg" alt="project LAB" width="370" height="294" />
+              <div class="overlay">
+                <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                  платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
+            </div>
             <div class="portfolio-border"><h2 class="portfolio-title">Проект LAB</h2>
             <p class="portfolio-deskription">Маркетинг</p></div>
             </a
@@ -175,12 +196,15 @@
         </li>
         <li class="portfolio-list-item">
           <a href="" class="link" 
-            ><img
-              src="./image/portfolio/img-8.jpg"
-              alt="Growing Business"
-              width="370"
-              height="294"
-            />
+            >
+            <div class="cards-block">
+              <img src="./image/portfolio/img-8.jpg" alt="Growing Business" width="370" height="294" />
+              <div class="overlay">
+                <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                  платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
+            </div>
             <div class="portfolio-border"><h2 class="portfolio-title">Growing Business</h2>
             <p class="portfolio-deskription">Приложение</p></div>
             </a
