--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <li class="address-list-item">
               <a href="mailto:info@devstudio.com" class="connect-header link"
                 ><svg class="icon-address-list" width="16" height="12">
-                  <use href="../svg/sprite.svg#icon-list"></use>
+                  <use href="./svg/sprite.svg#icon-list"></use>
                 </svg>
                 info@devstudio.com</a
               >
@@ -44,7 +44,7 @@
             <li class="address-list-item">
               <a href="tel:+380961111111" class="connect-header link"
                 ><svg class="icon-address-list" width="10" height="16">
-                  <use href="../svg/sprite.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a>
+                  <use href="./svg/sprite.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a>
             </li>
           </ul>
         </address>
@@ -163,22 +163,22 @@
                 <li class="social-list-item">
                   <a href="" class="social-list-link"
                     ><svg class="icon-social" width="20" height="20">
-                      <use href="../svg/sprite.svg#icon-instagram"></use></svg></a>
+                      <use href="./svg/sprite.svg#icon-instagram"></use></svg></a>
                 </li>
                 <li class="social-list-item">
                   <a href="" class="social-list-link"
                     ><svg class="icon-social" width="20" height="20">
-                      <use href="../svg/sprite.svg#icon-twitter"></use></svg></a>
+                      <use href="./svg/sprite.svg#icon-twitter"></use></svg></a>
                 </li>
                 <li class="social-list-item">
                   <a href="" class="social-list-link"
                     ><svg class="icon-social" width="20" height="20">
-                      <use href="../svg/sprite.svg#icon-facebook"></use></svg></a>
+                      <use href="./svg/sprite.svg#icon-facebook"></use></svg></a>
                 </li>
                 <li class="social-list-item">
                   <a href="" class="social-list-link"
                     ><svg class="icon-social" width="20" height="20">
-                      <use href="../svg/sprite.svg#icon-linkedin"></use></svg></a>
+                      <use href="./svg/sprite.svg#icon-linkedin"></use></svg></a>
                 </li>
               </ul>
             </li>
@@ -195,22 +195,22 @@
                 <li class="social-list-item">
                   <a href="" class="social-list-link"
                     ><svg class="icon-social" width="20" height="20">
-                      <use href="../svg/sprite.svg#icon-instagram"></use></svg></a>
+                      <use href="./svg/sprite.svg#icon-instagram"></use></svg></a>
                 </li>
                 <li class="social-list-item">
                   <a href="" class="social-list-link"
                     ><svg class="icon-social" width="20" height="20">
-                      <use href="../svg/sprite.svg#icon-twitter"></use></svg></a>
+                      <use href="./svg/sprite.svg#icon-twitter"></use></svg></a>
                 </li>
                 <li class="social-list-item">
                   <a href="" class="social-list-link"
                     ><svg class="icon-social" width="20" height="20">
-                      <use href="../svg/sprite.svg#icon-facebook"></use></svg></a>
+                      <use href="./svg/sprite.svg#icon-facebook"></use></svg></a>
                 </li>
                 <li class="social-list-item">
                   <a href="" class="social-list-link"
                     ><svg class="icon-social" width="20" height="20">
-                      <use href="../svg/sprite.svg#icon-linkedin"></use></svg></a>
+                      <use href="./svg/sprite.svg#icon-linkedin"></use></svg></a>
                 </li>
               </ul>
             </li>
@@ -227,22 +227,22 @@
                 <li class="social-list-item">
                   <a href="" class="social-list-link"
                     ><svg class="icon-social" width="20" height="20">
-                      <use href="../svg/sprite.svg#icon-instagram"></use></svg></a>
+                      <use href="./svg/sprite.svg#icon-instagram"></use></svg></a>
                 </li>
                 <li class="social-list-item">
                   <a href="" class="social-list-link"
                     ><svg class="icon-social" width="20" height="20">
-                      <use href="../svg/sprite.svg#icon-twitter"></use></svg></a>
+                      <use href="./svg/sprite.svg#icon-twitter"></use></svg></a>
                 </li>
                 <li class="social-list-item">
                   <a href="" class="social-list-link"
                     ><svg class="icon-social" width="20" height="20">
-                      <use href="../svg/sprite.svg#icon-facebook"></use></svg></a>
+                      <use href="./svg/sprite.svg#icon-facebook"></use></svg></a>
                 </li>
                 <li class="social-list-item">
                   <a href="" class="social-list-link"
                     ><svg class="icon-social" width="20" height="20">
-                      <use href="../svg/sprite.svg#icon-linkedin"></use></svg></a>
+                      <use href="./svg/sprite.svg#icon-linkedin"></use></svg></a>
                 </li>
               </ul>
             </li>
@@ -259,22 +259,22 @@
                 <li class="social-list-item">
                   <a href="" class="social-list-link"
                     ><svg class="icon-social" width="20" height="20">
-                      <use href="../svg/sprite.svg#icon-instagram"></use></svg></a>
+                      <use href="./svg/sprite.svg#icon-instagram"></use></svg></a>
                 </li>
                 <li class="social-list-item">
                   <a href="" class="social-list-link"
                     ><svg class="icon-social" width="20" height="20">
-                      <use href="../svg/sprite.svg#icon-twitter"></use></svg></a>
+                      <use href="./svg/sprite.svg#icon-twitter"></use></svg></a>
                 </li>
                 <li class="social-list-item">
                   <a href="" class="social-list-link"
                     ><svg class="icon-social" width="20" height="20">
-                      <use href="../svg/sprite.svg#icon-facebook"></use></svg></a>
+                      <use href="./svg/sprite.svg#icon-facebook"></use></svg></a>
                 </li>
                 <li class="social-list-item">
                   <a href="" class="social-list-link"
                     ><svg class="icon-social" width="20" height="20">
-                      <use href="../svg/sprite.svg#icon-linkedin"></use></svg></a>
+                      <use href="./svg/sprite.svg#icon-linkedin"></use></svg></a>
                 </li>
               </ul>
             </li>
@@ -289,34 +289,34 @@
             <li class="clients-list-item">
               <a href="" class="clients-list-link">
                 <svg class="icon-clients" width="45" height="50">
-                  <use href="../svg/sprite.svg#icon-logo-1"></use>
+                  <use href="./svg/sprite.svg#icon-logo-1"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-list-item">
               <a href="" class="clients-list-link"
                 ><svg class="icon-clients" width="40" height="52">
-                  <use href="../svg/sprite.svg#icon-logo-2"></use></svg></a>
+                  <use href="./svg/sprite.svg#icon-logo-2"></use></svg></a>
             </li>
             <li class="clients-list-item">
               <a href="" class="clients-list-link"
                 ><svg class="icon-clients" width="41" height="43">
-                  <use href="../svg/sprite.svg#icon-logo-3"></use></svg></a>
+                  <use href="./svg/sprite.svg#icon-logo-3"></use></svg></a>
             </li>
             <li class="clients-list-item">
               <a href="" class="clients-list-link"
                 ><svg class="icon-clients" width="80" height="42">
-                  <use href="../svg/sprite.svg#icon-logo-4"></use></svg></a>
+                  <use href="./svg/sprite.svg#icon-logo-4"></use></svg></a>
             </li>
             <li class="clients-list-item">
               <a href="" class="clients-list-link"
                 ><svg class="icon-clients" width="59" height="47">
-                  <use href="../svg/sprite.svg#icon-logo-5"></use></svg></a>
+                  <use href="./svg/sprite.svg#icon-logo-5"></use></svg></a>
             </li>
             <li class="clients-list-item">
               <a href="" class="clients-list-link"
                 ><svg class="icon-clients" width="88" height="45">
-                  <use href="../svg/sprite.svg#icon-logo-6"></use></svg></a>
+                  <use href="./svg/sprite.svg#icon-logo-6"></use></svg></a>
             </li>
           </ul>
         </div>
@@ -352,21 +352,21 @@
             <li class="footer-social-list-item">
               <a href="" class="footer-social-list-link"
                 ><svg class="icon-footer-social" width="20" height="20">
-                  <use href="../svg/sprite.svg#icon-instagram"></use></svg></a>
+                  <use href="./svg/sprite.svg#icon-instagram"></use></svg></a>
             </li>
             <li class="footer-social-list-item">
               <a href="" class="footer-social-list-link"
                 ><svg class="icon-footer-social" width="20" height="20">
-                  <use href="../svg/sprite.svg#icon-twitter"></use></svg></a>
+                  <use href="./svg/sprite.svg#icon-twitter"></use></svg></a>
             </li>
             <li class="footer-social-list-item">
               <a href="" class="footer-social-list-link"
                 ><svg class="icon-footer-social" width="20" height="20">
-                  <use href="../svg/sprite.svg#icon-facebook"></use></svg></a>
+                  <use href="./svg/sprite.svg#icon-facebook"></use></svg></a>
             </li>
             <li class="footer-social-list-item">
               <a href="" class="footer-social-list-link"><svg class="icon-footer-social" width="20" height="20">
-                  <use href="../svg/sprite.svg#icon-linkedin"></use></svg></a>
+                  <use href="./svg/sprite.svg#icon-linkedin"></use></svg></a>
             </li>
           </ul>
         </div>
